CMBSandbox4/src/objects/Transaction_Line_Debit__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill__c</fullName>
        <label>Bill</label>
        <referenceTo>Bill__c</referenceTo>
        <relationshipLabel>Transaction Line Debits</relationshipLabel>
        <relationshipName>Transaction_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount_Not_Applied__c</fullName>
        <formula>Transaction__r.Amt_Non_Hourly__c  - Transaction__r.Total_Transaction_Debits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Amount Not Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Transaction Line Debits</relationshipLabel>
        <relationshipName>Transaction_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Transaction Line Debit</label>
    <nameField>
        <displayFormat>TL-{0000}</displayFormat>
        <label>Transaction Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Line Debits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BILL_DUE_AMT_LESS_THAN_DEBT_AMT_PAID</fullName>
        <active>true</active>
        <description>If Debit Bill Paid amount exceeds to Bill due amount throws error message</description>
        <errorConditionFormula>AND( Bill__r.Bill_Amount_Due__c  &lt;  Amount__c  , Bill__r.Bill_Amount_Due__c &gt;0,Amount__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Bill Paid Amount exceeds Balance Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Line_Item_Amount_Greater_than_transac</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Transaction_Amount_Not_Applied__c &gt;= 0)</errorConditionFormula>
        <errorMessage>The Line Item Amount Cannot be Greater than the Amount on the Transaction</errorMessage>
    </validationRules>
</CustomObject>